@@ -140,11 +140,21 @@ This ability governs two dueling players.
 
 WANDERHOMELATER=\
 Ability    : WanderHomeLater\n\r\
-Parameters : \n\r\
-Example    : \n\r\
+Parameters : (AREAOK=true/false) (IGNOREPCS=true/false) (ONCE=true/false)\n\r\
+Parameters : (MINTICKS=[TICKS]) (MAXTICKS=[TICKS]) (IGNOREFOLLOW=true/false)\n\r\
+Example    : once=false areaok=true minticks=10 maxticks=20\n\r\
 Description: \n\r\
-As soon as a mob with this ability finds himself able to move, and no longer in combat, \
-he will wander back to his start room.
+By default, as soon as a mob with this ability finds himself able to move, and no longer in combat, \
+and not following anyone, and the room clear of PCs, he will wander back to his start room until he \
+finds himself, once again, far from home.\n\r\
+\n\r\
+The default behavior can be modified with parameters.  AREAOK will allow the mob to wander, so long as \
+he stays in his home area, only returning home if he finds himself outside his area.  IGNOREPCS will \
+allow the mob to wander home even if other PCs are in the room watching him.  IGNOREFOLLOW will \
+allow the mob to wander home even if he is following someone, magically or otherwise.  ONCE will \
+make this property work only one time, deleting itself after the mob has gone home. MINTICKS and MAXTICKS \
+set a limit on how long the mob can be away from home before considering a return trip; by default, MINTICKS \
+and MAXTICKS are 0, meaning the mob is constantly trying to get home.
 
 COMBATSLEEP=\
 Ability    : COMBATSLEEP\n\r\
