@@ -12,6 +12,7 @@
   11. Emoter behavior's "inroom" parameter changed to comma delimited -- it just wasn't working the other way. 
   12. Scriptable GET_PROG is now functional on container items, as it will match the item being retreived, not the container.
   13. Default XP chart (lists.ini) modified to make low levels faster, and level off around 5k per level.
+  14. WanderHomeLater property expanded into more usefulness -- about 8 new parameters added.
    *. finish collision management, against space ships at least.
    *. interacting items of diff tech level might damage each other
    *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
